syntax = "proto3";
import "google/protobuf/empty.proto";

package chat;
option go_package = "github.com/AkinAD/grpc_chat_fromNodeToGo;grpc_chat_fromNodeToGo";

service ChatService {
    rpc ChatInitiate(InitiateRequest) returns (InitiateResponse){};
    rpc SendMessage(MessageRequest) returns (google.protobuf.Empty){};
    rpc UserStream(StreamRequest) returns (stream UserStreamResponse){};
    rpc ChatStream(StreamRequest) returns (stream  StreamMessage){}
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse){}
}

message InitiateRequest {
    string name =1;
    string avatar_url =2;
}

message InitiateResponse {
    string id = 1;
}

message MessageRequest {
    string id = 1;
    string message = 2;
}

message StreamRequest {
    string id = 1;
}

enum Status {
    UNKNOWN = 0;
    ONLINE = 1;
    OFFLINE = 2;
}

message User {
    string id =1;
    string name =2;
    string status = 3;
    string avatar_url = 4;
}
message UserStreamResponse {
    repeated User users = 1;
}

enum MessageType {
	TEXT  = 0;
	MEDIA = 1;
	FILE =  2;
	UNKNOWN_FORMAT = 3;
}

message StreamMessage {
    string user_id = 1;
    string user_avatar = 2;
    string user_name = 3;
    string message = 4;
    string message_type = 5;
}

message UploadImageRequest {
    oneof data {
        ImageInfo info =1;
        bytes chunk_data = 2;

    }
}

message ImageInfo {
    string file_name = 1;
    string image_type = 2;
}

message UploadImageResponse {
    string id = 1;
    string size =2;
    string url = 3;
}